--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-streamlit==0.69.2
-pandas==0.25.1
-numpy==1.17.2
-joblib==0.13.2
-matplotlib==3.1.1
-scipy==1.5.2
-sklearn==0.0
-lime==0.2.0.1
+pip install openpyxl
